--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -19,7 +19,7 @@
           Criamos as melhores experiencias web contando as melhores histórias
         </p>
         <div class="flex justify-center">
-          <button class="inline-flex items-center bg-transparent border-2 border-neutral-500 text-neutral-500 px-6 py-3 focus:outline-none hover:bg-violet-700 hover:text-white hover:border-violet-700 rounded-full text-base mt-4 md:mt-0 transition duration-300 ease-in-out font-semibold">
+          <button class="inline-flex items-center bg-transparent border-2 border-neutral-500 text-neutral-500 px-6 py-3 focus:outline-none hover:bg-violet-700 hover:text-white hover:border-violet-700 rounded-full text-base lg:text-lg mt-4 md:mt-0 transition duration-300 ease-in-out font-semibold">
             Iniciar um Projeto
           </button>
         </div>
