Update Works, Goods, Pricing, Footer, Faq

--- a/src/components/Works.astro
+++ b/src/components/Works.astro
@@ -7,11 +7,11 @@
     <h2 class="text-3xl xl:text-6xl font-bold">Ultimos Projetos</h2>
   </div>
 	<div class="container grid grid-cols-2 gap-4 p-8 mx-auto md:grid-cols-4">
-		<img src="https://source.unsplash.com/random/301x301/" alt="" class="w-full h-full col-span-2 row-span-2 rounded shadow-sm min-h-96 md:col-start-1 md:row-start-1 dark:bg-gray-500 aspect-square">
-		<img alt="" class="w-full h-full rounded shadow-sm min-h-48 dark:bg-gray-500 aspect-square" src="https://source.unsplash.com/random/200x200/?0">
-		<img alt="" class="w-full h-full rounded shadow-sm min-h-48 dark:bg-gray-500 aspect-square" src="https://source.unsplash.com/random/200x200/?1">
-		<img alt="" class="w-full h-full rounded shadow-sm min-h-48 dark:bg-gray-500 aspect-square" src="https://source.unsplash.com/random/200x200/?2">
-		<img alt="" class="w-full h-full rounded shadow-sm min-h-48 dark:bg-gray-500 aspect-square" src="https://source.unsplash.com/random/200x200/?3">
+		<img src="https://res.cloudinary.com/dfj6st5pk/image/upload/v1663337901/Presentation_ioqycc.webp" alt="" class="w-full h-full col-span-2 row-span-2 rounded shadow-sm min-h-96 md:col-start-1 md:row-start-1 dark:bg-gray-500 aspect-video">
+		<img alt="" class="w-full h-full rounded shadow-sm min-h-48 dark:bg-gray-500 aspect-video" src="https://res.cloudinary.com/dfj6st5pk/image/upload/v1663804233/Logo-capa_gxzvsw.webp">
+		<img alt="" class="w-full h-full rounded shadow-sm min-h-48 dark:bg-gray-500 aspect-video" src="https://res.cloudinary.com/dfj6st5pk/image/upload/v1663671791/Presentation-tipscode_o2wsul.webp">
+		<img alt="" class="w-full h-full rounded shadow-sm min-h-48 dark:bg-gray-500 aspect-video" src="https://res.cloudinary.com/dfj6st5pk/image/upload/v1663362762/Case-sales-page-tipscode_yukf6r.webp">
+		<img alt="" class="w-full h-full rounded shadow-sm min-h-48 dark:bg-gray-500 aspect-video" src="https://res.cloudinary.com/dfj6st5pk/image/upload/v1663373901/Overview_20Dashboard_kelqw8.webp">
 		
 	</div>
 </section>
