--- a/src/components/Goods.astro
+++ b/src/components/Goods.astro
@@ -2,73 +2,54 @@
 
 ---
 
-<section class="text-gray-400 bg-gray-900 body-font">
+<section class="text-neutral-800 bg-neutral-100 body-font">
     <div class="container px-5 py-24 mx-auto flex flex-wrap">
-      <div class="flex flex-col text-center w-full mb-20">
-        <h2 class="text-xs text-indigo-400 tracking-widest font-medium title-font mb-1">ROOF PARTY POLAROID</h2>
-        <h1 class="sm:text-3xl text-2xl font-medium title-font text-white">Master Cleanse Reliac Heirloom</h1>
+      <div class="flex flex-col w-full mb-20">
+        <h2 class="text-xs lg:text-6xl text-neutral-800 tracking-widest font-bold title-font mb-1">O Que Fazemos</h2>
       </div>
       <div class="flex flex-wrap -m-4">
         <div class="p-4 md:w-1/3">
-          <div class="flex rounded-lg h-full bg-gray-800 bg-opacity-60 p-8 flex-col">
+          <div class="flex rounded h-full bg-gradient-to-b from-neutral-600 to-neutral-800 p-8 flex-col">
             <div class="flex items-center mb-3">
-              <div class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full bg-indigo-500 text-white flex-shrink-0">
+              <div class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full bg-transparent text-white flex-shrink-0">
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
                   <path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
                 </svg>
               </div>
-              <h2 class="text-white text-lg title-font font-medium">Shooting Stars</h2>
+              <h2 class="text-neutral-100 text-lg lg:text-3xl title-font font-medium">Shooting Stars</h2>
             </div>
             <div class="flex-grow">
-              <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
-              <a class="mt-3 text-indigo-400 inline-flex items-center">Learn More
-                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
-                  <path d="M5 12h14M12 5l7 7-7 7"></path>
-                </svg>
-              </a>
+              <p class="leading-relaxed text-base text-neutral-300">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
             </div>
           </div>
         </div>
         <div class="p-4 md:w-1/3">
-          <div class="flex rounded-lg h-full bg-gray-800 bg-opacity-60 p-8 flex-col">
+          <div class="flex rounded h-full bg-gradient-to-b from-neutral-600 to-neutral-800 p-8 flex-col">
             <div class="flex items-center mb-3">
-              <div class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full bg-indigo-500 text-white flex-shrink-0">
+              <div class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full bg-transparent text-white flex-shrink-0">
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                  <path d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"></path>
-                  <circle cx="12" cy="7" r="4"></circle>
+                  <path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
                 </svg>
               </div>
-              <h2 class="text-white text-lg title-font font-medium">The Catalyzer</h2>
+              <h2 class="text-neutral-100 text-lg lg:text-3xl title-font font-medium">Shooting Stars</h2>
             </div>
             <div class="flex-grow">
-              <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
-              <a class="mt-3 text-indigo-400 inline-flex items-center">Learn More
-                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
-                  <path d="M5 12h14M12 5l7 7-7 7"></path>
-                </svg>
-              </a>
+              <p class="leading-relaxed text-base text-neutral-300">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
             </div>
           </div>
         </div>
         <div class="p-4 md:w-1/3">
-          <div class="flex rounded-lg h-full bg-gray-800 bg-opacity-60 p-8 flex-col">
+          <div class="flex rounded h-full bg-gradient-to-b from-neutral-600 to-neutral-800 p-8 flex-col">
             <div class="flex items-center mb-3">
-              <div class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full bg-indigo-500 text-white flex-shrink-0">
+              <div class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full bg-transparent text-white flex-shrink-0">
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                  <circle cx="6" cy="6" r="3"></circle>
-                  <circle cx="6" cy="18" r="3"></circle>
-                  <path d="M20 4L8.12 15.88M14.47 14.48L20 20M8.12 8.12L12 12"></path>
+                  <path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
                 </svg>
               </div>
-              <h2 class="text-white text-lg title-font font-medium">Neptune</h2>
+              <h2 class="text-neutral-100 text-lg lg:text-3xl title-font font-medium">Shooting Stars</h2>
             </div>
             <div class="flex-grow">
-              <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
-              <a class="mt-3 text-indigo-400 inline-flex items-center">Learn More
-                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
-                  <path d="M5 12h14M12 5l7 7-7 7"></path>
-                </svg>
-              </a>
+              <p class="leading-relaxed text-base text-neutral-300">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
             </div>
           </div>
         </div>
